--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,6 @@
       integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
       crossorigin="anonymous"
     ></script>
-    <script type="module" src="./main.js" defer async="false"></script>
+    <script type="module" src="./main.js" defer></script>
   </body>
 </html>
